--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -44,6 +44,7 @@ button {
   align-items: flex-end;
   height: 40px;
   justify-content: space-between;
+  font-family: 'bungee';
 }
 
 .errMsg {
